@@ -13,7 +13,7 @@ import static com.kips.backend.common.enums.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
+    USER(Set.of(USER_READ)),
     ADMIN(
             Set.of(
                     ADMIN_READ,
